seem to work now

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tabler/icons-react": "^3.31.0",
     "ag-grid-community": "32.3.3",
-    "ag-grid-enterprise": "32.3.3",
+    "ag-grid-enterprise": "^32.3.3",
     "ag-grid-react": "32.3.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
